# Accounting-System

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  generate_demo_excel.py  pyproject.toml  test_import.py
backend/alembic/: env.py
backend/alembic/versions/: 7336cd52ad4e_add_users_table.py  84fcd851ea78_payment_status_to_numeric.py  c66285d709bb_init.py
backend/app/: auth_utils.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  files.py  ledgers.py  master.py  options.py  reports.py  settings.py
backend/demo_data/: 匯入資料_demo.xlsx  寶號資料_demo.xlsx  廠商資料_demo.xlsx  總帳_demo.xlsx
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  MasterData.tsx  QuickEntry.tsx  Report.tsx  ResetPassword.tsx  Settings.tsx
